# OrCore

./: .gitignore  README.md  build_rs.sh  qemu-gdb-start.sh  qemu-start.sh  start-gdb.sh  start-qemu.sh
.VSCodeCounter/2024-09-25_22-44-27/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
doc/: Note-ch3-1.md  Note-ch3-3.md  Note-ch3-4.md  Note-ch4-3.md  Note-ch4-5.md  Note-ch5-3.md  Note-ch5-ex.md  Note-ch6-ex.md
fs/: Cargo.toml
fs-fuse/: Cargo.toml
fs-fuse/src/: main.rs
fs/src/: bitmap.rs  block_dev.rs  config.rs  io_error.rs  lib.rs
fs/src/block_cache/: block_cache.rs  mod.rs
fs/src/block_device/: mod.rs
fs/src/block_device/block_cache/: block_cache.rs  mod.rs
fs/src/ex_fat/: boot_sector.rs  const.rs  file_manage.rs  index_entry_manage.rs  mod.rs
fs/src/ex_fat/cluster_chain/: bitmap.rs  cluster_bitmap.rs  fat.rs  mod.rs
fs/src/ex_fat/model/: cluster_id.rs  index_entry.rs  mod.rs  unicode_str.rs  up_case_table.rs
fs/src/ex_fat/persistent_layer/: boot.rs  cluster_bitmap.rs  fat.rs  mod.rs  up_case_table.rs
fs/src/ex_fat/persistent_layer/model/: cluster_id.rs  mod.rs  unicode_str.rs
fs/src/ex_fat/persistent_layer/model/index_entry/: file_directory.rs  fs_file.rs  mod.rs  volume_label.rs
os/: Cargo.toml  Makefile  build.rs
os/.cargo/: config  config.toml
os/src/: batch.rs  console.rs  entry.asm  kernel_log.rs  lang_items.rs  linker-k210.ld  linker-qemu.ld  linker.ld  main.rs  rust_sbi.rs  sbi_call.rs
os/src/config/: mod.rs
os/src/drivers/: mod.rs
os/src/drivers/block/: mod.rs  sdcard.rs  virtio_blk.rs
os/src/error/: mem.rs  mod.rs  process.rs
os/src/fs/: mod.rs
os/src/loader/: mod.rs  stack.rs
os/src/mem/: address.rs  frame_allocator.rs  heap_allocator.rs  memory_set.rs  mod.rs  page_table.rs  user_buffer.rs
os/src/sync/: mod.rs  rw_lock.rs  spin_lock.rs  ups_cell.rs
os/src/syscall/: file_sys.rs  mod.rs  process.rs  time.rs
os/src/task/: context.rs  kernel_stack.rs  manager.rs  mod.rs  pid.rs  process.rs  processor.rs  switch.S  switch.rs  task.rs
os/src/trap/: context.rs  mod.rs  trap.S  trap.rs
os/src/util/: cpu.rs  mod.rs  time.rs
user/: Cargo.toml  Makefile  build.py
user/.cargo/: config  config.toml
user/src/: console.rs  lang_items.rs  lib.rs  linker.ld  sys_call.rs  userlib_log.rs
user/src/sync/: mod.rs  rw_lock.rs
user/src/syscall/: fs.rs  mod.rs  process.rs  time.rs
