[package]
name = "os"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.22"
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
#riscv = "0.11.1"
buddy_system_allocator = "0.10.0"

[profile.release]
debug = true

[features]
default = ["board_qemu"]
board_qemu = []
board_k210 = []
