[package]
name = "user_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv = "0.11.1"
buddy_system_allocator = "0.11.0"

[profile.release]
debug = true

[features]
board_qemu = []
board_k210 = []
