[package]
name = "user_lib"
version = "0.5.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv = "0.11.1"
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
buddy_system_allocator = "0.11.0"
bitflags = "2.6.0"

[profile.release]
debug = true

[features]
board_qemu = []
board_k210 = []
